fix: eliminate double scrollbars (finally)

--- a/src/assets/styles/dashboard.scss
+++ b/src/assets/styles/dashboard.scss
@@ -580,10 +580,6 @@ select {
     line-height: 36px;
     letter-spacing: -0.6px;
   }
-
-  img {
-    margin-bottom: 31px;
-  }
 }
 
 .dashboard_cal-scl_button {
@@ -1380,7 +1376,6 @@ div.time-style {
 
 .main-dashboard {
   height: 100%;
-  overflow: auto;
   position: relative;
 
   .summary-information {
@@ -1659,12 +1654,6 @@ div.time-style {
     line-height: 36px;
     letter-spacing: -0.6px;
   }
-
-  img {
-    margin-bottom: 31px;
-    width: 80px;
-    // border-radius: 100%;
-  }
 }
 
 .schedule-lesson-select {
@@ -1827,9 +1816,7 @@ div.time-style {
         line-height: 36px;
         letter-spacing: -0.6px;
       }
-      img {
-        margin-bottom: 31px;
-      }
+
       .enter-btn {
         background: $color-white;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.07);
