--- a/src/newPages/profile/student/style/GeneralProfile.scss
+++ b/src/newPages/profile/student/style/GeneralProfile.scss
@@ -6,8 +6,6 @@
 .main-dashboard {
   padding-bottom: 0 !important;
   .flex-container {
-  height: 100vh;
-
     .profile_section {
       padding: 9px 30px;
       .profile_banner {
